# NanoOS

./: .gitignore  Cargo.toml
bootloader/: Cargo.toml  i586-bootloader-linker.ld  i586-bootloader.json
bootloader/.cargo/: config
bootloader/src/: core_reqs.rs  lib.rs  main.rs  start.asm  vga_buffer.rs
bootloader/src/arch/x86_64/: stage0.asm
config/: grub.cfg
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: lib.rs  panic.rs  vga_buffer.rs
kernel/src/arch/x86_64/: boot.asm  boot64.asm  linker.ld  mod.rs
kernel/src/memory/: mod.rs
shared/pe_parser/: Cargo.toml
shared/pe_parser/src/: lib.rs
shared/rangeset/: Cargo.toml
src/: main.rs
test/fat32/: Cargo.toml  build_fs_image.sh  partition_layout.sfdisk
test/fat32/fs/: hello.txt
test/fat32/src/: main.rs
