[package]
name = "bootloader"
version = "0.1.0"
authors = ["Patrik M. Rosenström <patrik.millvik@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.6.0"
rangeset = { path = "../shared/rangeset" }
